--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,50 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap");
 
 * {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
 body {
     background-color: #22254b;
     font-family: "Poppins", sans-serif;
-    margin: 0;
 }
 
 header {
-    background-color: #373b69;
     display: flex;
     justify-content: flex-end;
-    padding: 1rem;
-}
+    padding: 30px 10%;
+    align-items: center;
+    color: #edf0f1;
+    background-color: #373b69;
+  }
+  
+  h1 {
+    margin-right: auto;
+  }
+  
+  .nav_links {
+    list-style-type: none;
+  }
+  
+  .nav_links li {
+    display: inline-block;
+    padding: 0px 20px;
+  }
+
+  .nav_links li a {
+    transition: all 0.3s ease 0s;
+    text-decoration: none;
+    color: #edf0f1;
+  }
+  
+  .nav_links li a:hover {
+    color: #0088a9;
+  }
 
 .search {
-    background-color: transparent;
+    background-color: floralwhite;
     border: 2px solid #22254b;
     border-radius: 50px;
     color: #fff;
@@ -39,6 +65,7 @@ header {
 main {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .movie {
