--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,9 @@
 body {
     background-color: #22254b;
     font-family: "Poppins", sans-serif;
+    min-height: 100vh;
+    justify-content: center;
+    padding: 0 35px;
 }
 
 header {
@@ -62,20 +65,38 @@ header {
     outline: none;
 }
 
-main {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+.movies-container {
+    display: grid;
+    grid-auto-flow: column;
+    grid-auto-columns: calc((100 / 3) - 12px);
+    gap: 16px;
+    overflow: hidden;
+    /* max-width: 1100px;
+    width: 100%; */
+    margin-top: 20px;
+    position: relative;
+} 
+
+.movies-container h2 {
+    height: 30px;
+    width: 100%;
+    min-width: 150px;
+    display: inline-block;
+    font-size: 20px;
+    font-weight: 600;
+    color: floralwhite;
+    margin-top: 20px;
 }
 
 .movie {
     background-color: #373b69;
-    border-radius: 3px;
+    border-radius: 10px;
     box-shadow: 0 4px 5px rgba(0, 0, 0, 0.2);
-    overflow: hidden;
+    overflow:hidden;
     position: relative;
     margin: 1rem;
-    width: 300px;
+    min-width: 250px;
+    margin-right: 10px;
 }
 
 .movie img {
@@ -117,6 +138,7 @@ main {
 
 .rating {
     margin-top: 5px;
+    justify-content: center;
 }
 
 .overview {
@@ -139,3 +161,43 @@ main {
 .movie:hover .overview {
     transform: translateY(0);
 }
+
+#prev-btn, #next-btn {
+    display: inline-block;
+    padding: 0.5rem 1rem;
+    border-radius: 50%;
+    border: 1px solid #22254b;
+    color: #22254b;
+    cursor: pointer;
+    text-align: center;
+    cursor: pointer;
+    top: 50%;
+    transform: translateY(-50%);
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.23);
+    font-size: 24px;
+    position: absolute;
+}
+
+#prev-btn:hover, #next-btn:hover {
+    background-color: #22254b;
+    color: #fff;
+}
+
+#prev-btn {
+    left: 50px;
+}
+
+#next-btn {
+    right: 50px;
+}
+
+@media screen and (max-width: 900px) {
+    .movies-container {
+      grid-auto-columns: calc((100% / 2) - 9px);
+    }
+  }
+  @media screen and (max-width: 600px) {
+    .movies-container {
+      grid-auto-columns: 100%;
+    }
+  }
